--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>AHMAD ZUBAIR</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome to</h1>
+            <h1><span class="orange-color">Ahmad Zubair</span> World</h1>
+            <h3>Virtual Assistant & Admin Support,</h3>
+            <p style="font-size:130%;">I am a reliable and hard-working freelancer. I have sound experience in virtual
+                assistant, admin support,
+                and
+                finding emails. looking long-term duration projects also, I provide 99% satisfaction Service,</p>
+            <a class="linkedin-button" target="_blank" href="https://www.linkedin.com/in/ahmad-zubair-519574228/"><img
+                    alt="Qries" src="images/linkedin-button.jpg" width="10" height="35">
+            </a>
+
+        </div>
+        <div class="half-width"><img src="images/ap.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
