--- a/index.html
+++ b/index.html
@@ -23,11 +23,27 @@
                 and
                 finding emails. looking long-term duration projects also, I provide 99% satisfaction Service,</p>
             <a class="linkedin-button" target="_blank" href="https://www.linkedin.com/in/ahmad-zubair-519574228/"><img
-                    alt="Qries" src="images/linkedin-button.jpg" width="10" height="35">
+                    alt="Zubair" src="images/linkedin-button.jpg" width="10" height="35">
             </a>
 
         </div>
         <div class="half-width"><img src="images/ap.png" alt="">
+        </div>
+    </section>
+    <section class="dream-big">
+        <div class="half-width"><img src="images/ap2.png" alt="">
+        </div>
+
+        <div class="half-width">
+            <h1>My Dream</h1>
+            <h2>Web Designer & Developer,</h2>
+            <p style="font-size:130%;">As a young child, my dream occupation was to games. As I grew older and my
+                interests changed, my dream profession changed also. Although most of these dreams were not very
+                long-lived, one occupational dream has outlasted all others and has finally emerged as the dream I
+                passionately pursue,</p>
+            <a href="mailto:maxaffi21@gmail.com?Subject= Re: Reply mail &body= reply body" target="_top"><img
+                    alt="Email" src="images/hello.jpg" width="70" height="70">
+            </a>
         </div>
     </section>
 </body>
