--- a/index.html
+++ b/index.html
@@ -62,8 +62,15 @@
                 <h3 class="orange-color">2022-2024 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
                     showed
-                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+                    it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.
+                </p>
 
             </div>
         </div>
     </section>
+    <footer>
+        <p>© 2022 Ahmad</p>
+    </footer>
+</body>
+
+</html>
